# numaperf

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  specs.md  specs1.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  getting-started.md  hard-mode.md  kernel-requirements.md  roadmap.md  versioning.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/advanced/: hard-mode.md  performance-tuning.md  platform-support.md  troubleshooting.md
documentation/docs/api/: affinity.md  core-types.md  errors.md  io.md  memory.md  observability.md  overview.md  scheduler.md  sharded.md  topology.md
documentation/docs/concepts/: architecture.md  memory-policies.md  numa-basics.md  soft-vs-hard-mode.md
documentation/docs/examples/: basic-topology.md  buffer-pool.md  diagnostics.md  memory-placement.md  worker-pool.md
documentation/docs/getting-started/: installation.md  quickstart.md  system-requirements.md
documentation/docs/guides/: device-locality.md  memory-allocation.md  observability.md  sharded-data.md  thread-pinning.md  topology-discovery.md  work-scheduling.md
documentation/docs/reference/: changelog.md  cli.md  kernel-config.md
numaperf/: Cargo.toml  README.md
numaperf-affinity/: Cargo.toml  README.md
numaperf-affinity/src/: lib.rs  pin.rs  syscall.rs
numaperf-bench/: Cargo.toml  README.md
numaperf-bench/benches/: affinity.rs  memory.rs  scheduler.rs  sharded.rs
numaperf-bench/src/: lib.rs  main.rs  output.rs  runner.rs
numaperf-bench/src/info/: affinity.rs  capabilities.rs  json_output.rs  mod.rs  topology.rs
numaperf-c/: Cargo.toml  cbindgen.toml
numaperf-c/include/: numaperf.h
numaperf-c/src/: lib.rs
numaperf-core/: Cargo.toml  README.md
numaperf-core/src/: capability.rs  enforcement.rs  error.rs  lib.rs  mode.rs  types.rs
numaperf-io/: Cargo.toml  README.md
numaperf-io/src/: device.rs  discovery.rs  lib.rs
numaperf-mem/: Cargo.toml  README.md
numaperf-mem/src/: huge.rs  lib.rs  policy.rs  prefault.rs  region.rs  syscall.rs
numaperf-perf/: Cargo.toml  README.md
numaperf-perf/src/: collector.rs  lib.rs  report.rs  stats.rs
numaperf-sched/: Cargo.toml  README.md
numaperf-sched/src/: executor.rs  lib.rs  queue.rs  steal.rs  task.rs  worker.rs
numaperf-sharded/: Cargo.toml  README.md
numaperf-sharded/src/: counter.rs  lib.rs  padded.rs  sharded.rs
numaperf-topo/: Cargo.toml  README.md
numaperf-topo/src/: lib.rs  node.rs  topology.rs
numaperf-topo/src/discovery/: fallback.rs  linux.rs  mod.rs
numaperf/examples/: basic_topology.rs  buffer_pool.rs  diagnostics.rs  memory_placement.rs  worker_pool.rs
numaperf/src/: lib.rs
