[package]
name = "numaperf-affinity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Thread pinning and CPU affinity management"
readme = "README.md"

[dependencies]
numaperf-core = { version = "0.1.0", path = "../numaperf-core" }
numaperf-topo = { version = "0.1.0", path = "../numaperf-topo" }
libc.workspace = true
