[package]
name = "numaperf-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Benchmark suite and CLI tools for numaperf"
readme = "README.md"

[dependencies]
numaperf = { path = "../numaperf" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "numaperf-bench"
path = "src/main.rs"

[[bench]]
name = "sharded"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "affinity"
harness = false
