[package]
name = "numaperf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and error handling for the numaperf NUMA runtime"
readme = "README.md"

[dependencies]
thiserror.workspace = true
