[package]
name = "numaperf-sched"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Topology-aware work scheduling with locality-preserving stealing"
readme = "README.md"

[dependencies]
numaperf-core = { path = "../numaperf-core" }
numaperf-topo = { path = "../numaperf-topo" }
numaperf-affinity = { path = "../numaperf-affinity" }
