[package]
name = "numaperf-topo"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NUMA topology discovery and CPU locality mapping"
readme = "README.md"

[dependencies]
numaperf-core = { version = "0.1.0", path = "../numaperf-core" }
libc.workspace = true

[dev-dependencies]
tempfile = "3.10"
