[package]
name = "numaperf"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NUMA-first runtime for latency-critical Rust applications"
readme = "README.md"

[dependencies]
numaperf-core = { version = "0.1.0", path = "../numaperf-core" }
numaperf-topo = { version = "0.1.0", path = "../numaperf-topo" }
numaperf-affinity = { version = "0.1.0", path = "../numaperf-affinity" }
numaperf-mem = { version = "0.1.0", path = "../numaperf-mem" }
numaperf-sched = { version = "0.1.0", path = "../numaperf-sched" }
numaperf-sharded = { version = "0.1.0", path = "../numaperf-sharded" }
numaperf-io = { version = "0.1.0", path = "../numaperf-io" }
numaperf-perf = { version = "0.1.0", path = "../numaperf-perf" }
